# Deductra

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: change-proposal.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: README.md
docs/architecture/: README.md  agent-runtime-boundary.md  core-domain-contracts.md  dependency-rules.md  event-protocol-and-store.md  event-sourced-memory-projections.md  generator-foundation.md  human-reasoning-engine.md  logic-equations-backend-encodings.md  logic-equations-cli-and-trace.md  logic-equations-human-rules.md  logic-equations-specification.md  logic-grid-assistance.md  logic-grid-attempt-persistence.md  logic-grid-backend-encodings.md  logic-grid-guided-builder.md  (+10 more)
schemas/: agent-boundary-v1.schema.json  event-envelope-v1.schema.json  generation-contract-v1.schema.json  human-solve-trace-v1.schema.json  logic-equations-spec-v1.schema.json  logic-grid-assistance-v1.schema.json  logic-grid-attempt-record-v1.schema.json  logic-grid-builder-draft-v1.schema.json  logic-grid-play-session-v1.schema.json  logic-grid-spec-v1.schema.json  logic-grid-structured-import-v1.schema.json  memory-projections-v1.schema.json  puzzle-spec-v1.schema.json  puzzle-state-v1.schema.json  reasoning-hypergraph-v1.schema.json  report-model-v1.schema.json  verification-record-v1.schema.json
scripts/: check_conventions.py  check_docs.py  export_json_schema.py
tests/: test_package.py
(+155 files in other folders)
