[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "deductra"
version = "0.0.0"
description = "The professional foundation for the Deductra project."
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = "MIT"
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = []

[dependency-groups]
dev = [
  "commitizen>=4,<5",
  "pre-commit>=4,<5",
  "pyright>=1.1.408,<2",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "ruff>=0.14,<1",
]
security = [
  "pip-audit>=2.9,<3",
  "zizmor>=1.12,<2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deductra"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
  "--strict-config",
  "--strict-markers",
  "-ra",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["deductra"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]
